samples/_failures_safe/1761518126_ee9a21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e876e210.c: In function ‘main’:
./samples/SAFE/__tmp_e876e210.c:120:5: error: expected ‘,’ or ‘;’ at end of input
  120 |     int sample_count = sizeof(sample_logs)
      |     ^~~
./samples/SAFE/__tmp_e876e210.c:120:5: error: expected declaration or statement at end of input
